--- a/creditcard.html
+++ b/creditcard.html
@@ -4,7 +4,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1， shrink-to-fit=no">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.min.js"></script>
-    <script src="https://unpkg.com/mappa-mundi/dist/mappa.min.js" type="text/javascript"></script>
     <script src="js/main.js"></script>
     <title>Credit Card Validation</title>
     <link rel="stylesheet" href="style.css"/>
@@ -31,7 +30,7 @@
         <br><br>
         
         
-        <b>Motivation</b>
+        <b>Why this project?</b>
         <br>
         The reason I decided to work on this project was to gain an understanding of
         how Java applications communicate with databases, specifically, to learn how
