--- a/login.html
+++ b/login.html
@@ -4,7 +4,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1， shrink-to-fit=no">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.min.js"></script>
-    <script src="https://unpkg.com/mappa-mundi/dist/mappa.min.js" type="text/javascript"></script>
     <title>Login application</title>
     <link rel="stylesheet" href="style.css"/>
   	<link rel="stylesheet" href="https://unpkg.com/tachyons@4.12.0/css/tachyons.min.css"/>
@@ -21,7 +20,7 @@
           <img src="static/Home.png" style='border:1px solid #000000'  class="w-100 f5 measure" alt="poster">
         </div>
         <p class="f5 f5-ns avenir lh-copy center b--black-10 pb4">
-        <b>Motivation</b>
+        <b>Why this project?</b>
         <br>
         The reason I decided to work on this project was to gain an understanding on how
         login systems are implemented.
