Update about me.

--- a/creditcard.html
+++ b/creditcard.html
@@ -40,8 +40,9 @@
         <b>Key Takeaways</b><br>
         <em>JDBC</em><br>
         Gained an understanding of how JDBC API is responsible for connecting Java applications to
-        a database. In this project, I utilized the  SQLite JDBC driver, which was used to convert
-        JDBC calls to a call that the database can understand.<br><br>
+        a database. In this project, I utilized the  SQLite JDBC driver and now understand
+        how critical they are, since they are used to convert the JDBC calls to a call that 
+        the database can understand.<br><br>
         <em>Closing Connection</em><br>
         Also learned that it is best practice to explicitly close the database connection after using it, 
         since a memory leakage can occur if left open and that could potentially lead to poor performance
