--- a/login.html
+++ b/login.html
@@ -20,10 +20,16 @@
           <img src="static/Home.png" style='border:1px solid #000000'  class="w-100 f5 measure" alt="poster">
         </div>
         <p class="f5 f5-ns avenir lh-copy center b--black-10 pb4">
+        <b>About</b>
+        <br>
+        This a full stack application that creates accounts and stores all user information
+        into a database table.
+        <br><br>
         <b>Why this project?</b>
         <br>
-        The reason I decided to work on this project was to gain an understanding on how
-        login systems are implemented.
+        The reason I decided to work on this project was to gain an understanding of how
+        login systems are implemented and to address how the back-end and front-end communicate
+        with each other.
         <b></b>
         <br><br>
         <b>Key Takeaways</b><br>
